<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ST_Output" Id="{ba020951-4638-4ae5-a64b-d864868ff3cb}">
    <Declaration><![CDATA[TYPE ST_Output :
STRUCT
bBeacon_Red:BOOL;//三色灯红 OUT00
bBeacon_Yellow:bool;//三色灯黄 OUT01
bBeacon_Green:bool;//三色灯绿 OUT02
bBeacon_Buzzer:bool;//蜂鸣器 OUT03
bRuning:bool;//运行指示灯 OUT04
bStop:bool;//停止指示灯 OUT05
bLED:bool;//照明灯 OUT06
bNone1:bool;//预留 OUT07
bOpenLockPressPush_Cyl_H:BOOL;//解锁站解压侧推气缸到原位 OUT08
bOpenLockPressPush_Cyl_W:BOOL;//解锁站解压侧推气缸到工作位 OUT09
bOpenLockPressRotate_Cyl_H:BOOL;//解锁站解压旋转气缸到原位 OUT0A
bOpenLockPressRotate_Cyl_W:BOOL;//解锁站解压旋转气缸到工作位 OUT0B
bLine0PushElevator_Cyl_H:BOOL;//主流线拨料升降气缸到原位 OUT0C
bLine0PushElevator_Cyl_W:BOOL;//主流线拨料升降气缸到工作位 OUT0D
bAcquirePrevent2_Cyl_H:BOOL;//接驳线前前阻挡气缸缩回 OUT0E
bAcquirePrevent2_Cyl_W:BOOL;//接驳线前前阻挡气缸伸出 OUT0F
bLine0Part_Cyl_H:bool;//主流线分料气缸缩回 OUT10
bLine0Part_Cyl_W:bool;//主流线分料气缸伸出 OUT11
bLine0Prevent_Cyl_H:bool;//主流线阻挡气缸缩回 OUT12
bLine0Prevent_Cyl_W:bool;//主流线阻挡气缸伸出 OUT13
bLine0Push_Cyl_H:bool;//主流线拨料气缸缩回 OUT14
bLine0Push_Cyl_W:bool;//主流线拨料气缸伸出 OUT15
bAcquirePrevent0_Cyl_H:bool;//接驳线前阻挡气缸缩回 OUT16
bAcquirePrevent0_Cyl_W:bool;//接驳线前阻挡气缸伸出 OUT17
bAcquirePrevent1_Cyl_H:bool;//接驳线后阻挡气缸缩回 OUT18
bAcquirePrevent1_Cyl_W:bool;//接驳线后阻挡气缸伸出 OUT19
bAcquireLift_Cyl_H:bool;//接驳线顶升气缸缩回 OUT1A
bAcquireLift_Cyl_W:bool;//接驳线顶升气缸伸出 OUT1B
bAcquirePush_Cyl_H:bool;//接驳模组拨料气缸缩回 OUT1C
bAcquirePush_Cyl_W:bool;//接驳模组拨料气缸伸出 OUT1D
bAcquireElevator_Cyl_H:bool;//接驳模组升降气缸缩回 OUT1E
bAcquireElevator_Cyl_W:bool;//接驳模组升降气缸伸出 OUT1F
bSteeringLift_Cyl_H:bool;//转向站顶升气缸缩回 OUT20
bSteeringLift_Cyl_W:bool;//转向站顶升气缸伸出 OUT21
bSteeringAcquireElevator_Cyl_H:bool;//转向站接驳升降气缸缩回 OUT22
bSteeringAcquireElevator_Cyl_W:bool;//转向站接驳升降气缸伸出 OUT23
bSteeringRotate_Cyl_H:bool;//转向站旋转气缸缩回 OUT24
bSteeringRotate_Cyl_W:bool;//转向站旋转气缸伸出 OUT25
bSteeringAcquireLimit_Cyl_H:bool;//转向站接驳限位气缸缩回 OUT26
bSteeringAcquireLimit_Cyl_W:bool;//转向站接驳限位气缸伸出 OUT27
bOpenLockPrevent_Cyl_H:bool;//解锁站阻挡气缸缩回 OUT28
bOpenLockPrevent_Cyl_W:bool;//解锁站阻挡气缸伸出 OUT29
bOpenLockLift_Cyl_H:bool;//解锁站顶升气缸缩回 OUT2A
bOpenLockLift_Cyl_W:bool;//解锁站顶升气缸伸出 OUT2B
bOpenLockPush_Cyl_H:bool;//解锁站侧推气缸缩回 OUT2C
bOpenLockPush_Cyl_W:bool;//解锁站侧推气缸伸出 OUT2D
bOpenLockRotate_Cyl_H:bool;//解锁站旋转气缸缩回 OUT2E
bOpenLockRotate_Cyl_W:bool;//解锁站旋转气缸伸出 OUT2F
bOpenLockPush2_Cyl_H:bool;//解锁站侧推气缸2缩回 OUT30
bOpenLockPush2_Cyl_W:bool;//解锁站侧推气缸2伸出 OUT31
bTakeUcPrevent_Cyl_H:bool;//取UC站阻挡气缸缩回 OUT32
bTakeUcPrevent_Cyl_W:bool;//取UC站阻挡气缸伸出 OUT33
bTakeUcLift_Cyl_H:bool;//取UC站顶升气缸缩回 OUT34
bTakeUcLift_Cyl_W:bool;//取UC站顶升气缸伸出 OUT35
bTakeUcPush_Cyl_H:bool;//取UC站侧推气缸缩回 OUT36
bTakeUcPush_Cyl_W:bool;//取UC站侧推气缸伸出 OUT37
bTakeUcRotate_Cyl_H:bool;//取UC站旋转气缸缩回 OUT38
bTakeUcRotate_Cyl_W:bool;//取UC站旋转气缸伸出 OUT39
bTakeUcStandard_Cyl_H:bool;//取UC站校平气缸原位 OUT3A
bTakeUcStandard_Cyl_W:bool;//取UC站校平气缸工作位 OUT3B
bTakeUcFrockClamp_Cyl_H:BOOL;//取UC站工装夹紧气缸原位 OUT3C
bTakeUcFrockClamp_Cyl_W:bool;//取UC站工装夹紧气缸工作位 OUT3D
bUnloadFrockPrevent_Cyl_H:BOOL;//下工装站阻挡气缸缩回 OUT3E
bUnloadFrockPrevent_Cyl_W:bool;//下工装站阻挡气缸伸出 OUT3F
bUnloadFrockLift_Cyl_H:bool;//下工装站顶升气缸缩回 OUT40
bUnloadFrockLift_Cyl_W:bool;//下工装站顶升气缸伸出 OUT41
bUnloadFrockPush_Cyl_H:bool;//下工装站拨料气缸缩回 OUT42
bUnloadFrockPush_Cyl_W:bool;//下工装站拨料气缸伸出 OUT43
bTakeUc1Y_Cyl_H:bool;//取UC模组平移Y气缸缩回 OUT44
bTakeUc1Y_Cyl_W:bool;//取UC模组平移Y气缸伸出 OUT45
bTakeUc1Z1_Cyl_H:bool;//取UC模组升降Z1气缸缩回 OUT46
bTakeUc1Z1_Cyl_W:bool;//取UC模组升降Z1气缸伸出 OUT47
bTakeUc1Z2_Cyl_H:bool;//取UC模组升降Z2气缸缩回 OUT48
bTakeUc1Z2_Cyl_W:bool;//取UC模组升降Z2气缸伸出 OUT49
bTakeUc1Rotate_Cyl_H:bool;//取UC模组旋转气缸缩回 OUT4A
bTakeUc1Rotate_Cyl_W:bool;//取UC模组旋转气缸伸出 OUT4B
bTakeUc1Clamp_Cyl_H:bool;//取UC模组夹紧气缸缩回 OUT4C
bTakeUc1Clamp_Cyl_W:bool;//取UC模组夹紧气缸伸出 OUT4D
bUnloadUcElevator_Cyl_H:bool;//下UC皮带升降气缸缩回 OUT4E
bUnloadUcElevator_Cyl_W:bool;//下UC皮带升降气缸伸出 OUT4F
bUnloadUcConveyorPush_Cyl_H:bool;//下UC皮带拨料气缸缩回 OUT50
bUnloadUcConveyorPush_Cyl_W:bool;//下UC皮带拨料气缸伸出 OUT51
bUnloadFrockConveyorPrevent_Cyl_H:bool;//下工装皮带升降气缸缩回 OUT52
bUnloadFrockConveyorPrevent_Cyl_W:bool;//下工装皮带升降气缸伸出 OUT53
bUnloadFrockConveyorPush_Cyl_H:bool;//下工装皮带拨料气缸缩回 OUT54
bUnloadFrockConveyorPush_Cyl_W:bool;//下工装皮带拨料气缸伸出 OUT55
bAcquireFrontAxis:BOOL;//接驳站前步进 OUT56
bAcquireAxis:bool;//接驳线步进 OUT57
bDismantlingAxis:bool;//拆解线步进 OUT58
bUnloadUcAxis:bool;//下UC皮带步进 OUT59
bUnloadFrock:bool;//下工装皮带步进 OUT5A
bNone21:bool;//预留 OUT5B
bUnloadUcBeltTipper_Cyl_H:bool;//下UC皮带翻转气缸缩回 OUT5C
bUnloadUcBeltTipper_Cyl_W:bool;//下UC皮带翻转气缸伸出 OUT5D
bUnloadUcBeltLift_Cyl_H:bool;//下UC皮带顶升气缸缩回 OUT5E
bUnloadUcBeltLift_Cyl_W:bool;//下UC皮带顶升气缸伸出 OUT5F
bOpenLockElevator_Cyl_H:bool;//解锁站升降气缸原位 OUT60
bOpenLockElevator_Cyl_W:bool;//解锁站升降气缸工作位 OUT61
bOpenLockTranslation_Cyl_H:bool;//解锁站解锁平移原位 OUT62
bOpenLockTranslation_Cyl_W:bool;//解锁站解锁平移工作位 OUT63
bOpenLockPin_Cyl_H:bool;//解锁站按压气缸到原位 OUT64
bOpenLockPin_Cyl_W:bool;//解锁站按压气缸到工作位 OUT65
bTakeUcElevator_Cyl_H:bool;//取UC站升降气缸原位 OUT66
bTakeUcElevator_Cyl_W:bool;//取UC站升降气缸工作位 OUT67
bTakeUcPush1_Cyl_H:bool;//取UC站侧推1气缸到原位 OUT68
bTakeUcPush1_Cyl_W:bool;//取UC站侧推1气缸到工作位 OUT69
bNone35:BOOL;//预留 OUT6A
bNone36:BOOL;//预留 OUT6B
bNone37:BOOL;//预留 OUT6C
bNone38:BOOL;//预留 OUT6D
bNone39:bool;//预留 OUT6E
bNone40:bool;//预留 OUT6F

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>